--- a/frontend/src/components/home.css
+++ b/frontend/src/components/home.css
@@ -1,39 +1,38 @@
 .sideBar {
-
-	float: left;
-	border: 1px solid black;
-	width: 15%;
-	height: 100vh;
-	background: rgba(211, 211, 211, 0.1);
+  float: left;
+  border: 1px solid black;
+  width: 15%;
+  height: 100vh;
+  background: rgba(211, 211, 211, 0.1);
 }
 
-
 .sideLabels {
-
-	list-style-type: none;
-
+  list-style-type: none;
 }
 
 .maginZero {
-
 }
 
 .btn-link {
-	text-decoration: none !important;
-	display: inline-block;
-	-webkit-transition-duration: 1s; 
-  	transition-duration: 1s;
+  text-decoration: none !important;
+  display: inline-block;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
 }
 
 .btn-link:hover {
-	
 }
 
-#headingOne:hover, #headingTwo:hover {
-	background-color: rgba(211, 211, 211, 0.5);
+#headingOne:hover,
+#headingTwo:hover {
+  background-color: rgba(211, 211, 211, 0.5);
 }
 
 .small {
-	margin-bottom: 0px;
-	margin-left: 10px;
+  margin-bottom: 0px;
+  margin-left: 10px;
+}
+
+.list-no-bullet {
+  list-style-type: none;
 }
