--- a/frontend/src/components/members.css
+++ b/frontend/src/components/members.css
@@ -21,4 +21,19 @@
   float: right;
   margin: 30px;
   /* margin-top: 200px; */
+  border-radius: 10px;
+  /* height: 100px; */
+  padding: 20px;
+}
+
+.oldScraps-1 {
+  padding: 10px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  height: 50px;
+  margin: 10px;
+}
+
+.oldScraps {
+  border-radius: 10px;
 }
