--- a/frontend/src/components/college.css
+++ b/frontend/src/components/college.css
@@ -7,3 +7,11 @@
   padding: 20px 20px 20px 20px;
   margin-bottom: 20px;
 }
+
+.row {
+  margin: 10px 0px 10px 0px !important;
+}
+
+.col-lg-12:hover {
+  cursor: pointer;
+}
